<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:columnCount="5"
    android:padding="20dp"
    android:rowCount="6"
    android:textDirection="firstStrongRtl"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="5"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/lbl_numeros"
        android:textSize="48sp" />

    <Button
        android:id="@+id/bnt_selec1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_op1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_operaciones"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btn_op2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_operaciones"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/bnt_selec4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec6"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_op3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_operaciones"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btn_op4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_operaciones"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/bnt_selec7"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec8"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/bnt_selec9"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/bnt_selec10"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_selec11"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_selec11"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_op5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_operaciones"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btn_op6"
        android:layout_width="55dp"
        android:layout_height="110dp"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_column="3"
        android:layout_gravity="center"
        android:backgroundTint="@color/btn_operaciones2"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op6"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btn_op7"
        android:layout_width="55dp"
        android:layout_height="110dp"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_column="4"
        android:layout_gravity="center"
        android:backgroundTint="@color/btn_operaciones2"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_op7"
        app:cornerRadius="5dp" />


    <Button
        android:id="@+id/btn_resultado"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btn_numeros"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_resultado"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="27.5dp" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="serif-monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_clear"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />
</GridLayout>